# TODO-Harvester

./: AGENTS.md  BACKLOG.md  README.md  backlog_scanner.py  prd.json  progress.txt  pyproject.toml
.kiro/hooks/: update-docs-on-change.kiro.hook
tasks/: prd-refactor-python-patterns.md  prd-todo-backlog-scanner.md
